fix on album and artist models

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,4 +20,4 @@ spring:
           lob:
             non_contextual_creation: true
 cors:
-  originPatterns: http://localhost:3000,http://localhost:8080
+  originPatterns: http://localhost:3000
